--- a/sub_4.html
+++ b/sub_4.html
@@ -335,6 +335,7 @@
                     </div>
                     <a href="https://www.nintendo.co.kr/"><div class="Go"><p>Go</p></div></a>
                 </div>
+                <div class="line"></div>
                 <div class="ps">
                     <img src="images/sub4/ps.png" alt="ps">
                     <div class="text_wrap">
