--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="wrap">
         <div id="header">
             <div class="video_wrap">
-                <img src="images/main/main_banner1.jpg" alt="메인영상_이미지">
+                <!-- <img src="images/main/main_banner1.jpg" alt="메인영상_이미지"> -->
             </div>
             <div class="header_inner">
                 <div id="nav">
