--- a/sub_3-1.html
+++ b/sub_3-1.html
@@ -68,10 +68,10 @@
                     <p>페스티벌 정보</p>
                 </div>
                 <ul>
-                    <li class="select"><a href="sub_3-1.html">행사 개요</a></li>
-                    <li><a href="sub_3-2.html">행사 배치도</a></li>
-                    <li><a href="sub_3-3.html">티켓 및 이용안내</a></li>
-                    <li><a href="sub_3-4.html">오시는 길</a></li>
+                    <li class="select"><a href="sub_3-1.html#section1" >행사 개요</a></li>
+                    <li><a href="sub_3-2.html#section1">행사 배치도</a></li>
+                    <li><a href="sub_3-3.html#section1">티켓 및 이용안내</a></li>
+                    <li><a href="sub_3-4.html#section1">오시는 길</a></li>
                 </ul>
             </div>
             <div class="content">
