--- a/sub_5.html
+++ b/sub_5.html
@@ -65,9 +65,10 @@
             </div>
             <div class="search">
                 <form action="">
-                    <input type="search" placeholder="서비스명과 함께 검색해보세요.">
+                    <input type="search" placeholder="서비스명과 함께 검색해보세요." id="searchInput">
                 </form>
-                <div class="icon"><img src="images/sub5/search.png" alt="search"></div>
+                <div class="icon" id="searchIcon"><img src="images/sub5/search.png" alt="search">
+                </div>
             </div>
             <div class="keywords_wrap">
                 <p>추천키워드</p>
