--- a/sub_4.html
+++ b/sub_4.html
@@ -342,7 +342,7 @@
                         <span>PlayStation</span>
                         <a href="https://www.playstation.com/ko-kr/"><p>「PlayStation5 제품 정보」바로 가기</p></a>
                     </div>
-                    <a href=""><div class="Go"><p>Go</p></div></a>
+                    <a href="https://www.playstation.com/ko-kr/"><div class="Go"><p>Go</p></div></a>
                 </div>
             </div>
         </div>
