--- a/sub_4.html
+++ b/sub_4.html
@@ -331,18 +331,18 @@
                     <img src="images/sub4/nintendo.png" alt="nintendo">
                     <div class="text_wrap">
                         <span>NINTENDO SWITCH</span>
-                        <a href="https://www.nintendo.co.kr/"><p>「닌텐도 매거진 2025년 봄」바로 가기</p></a>
+                        <a href="https://www.nintendo.co.kr/" target="_blank"><p>「닌텐도 매거진 2025년 봄」바로 가기</p></a>
                     </div>
-                    <a href="https://www.nintendo.co.kr/"><div class="Go"><p>Go</p></div></a>
+                    <a href="https://www.nintendo.co.kr/" target="_blank"><div class="Go"><p>Go</p></div></a>
                 </div>
                 <div class="line"></div>
                 <div class="ps">
                     <img src="images/sub4/ps.png" alt="ps">
                     <div class="text_wrap">
                         <span>PlayStation</span>
-                        <a href="https://www.playstation.com/ko-kr/"><p>「PlayStation5 제품 정보」바로 가기</p></a>
+                        <a href="https://www.playstation.com/ko-kr/" target="_blank"><p>「PlayStation5 제품 정보」바로 가기</p></a>
                     </div>
-                    <a href="https://www.playstation.com/ko-kr/"><div class="Go"><p>Go</p></div></a>
+                    <a href="https://www.playstation.com/ko-kr/" target="_blank"><div class="Go"><p>Go</p></div></a>
                 </div>
             </div>
         </div>
