--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="wrap">
         <div id="header">
             <div class="video_wrap">
-                <!-- <img src="images/main/main_banner1.jpg" alt="메인영상_이미지"> -->
+                <video src="media/main.mp4" muted autoplay loop width="1920"></video>
             </div>
             <div class="header_inner">
                 <div id="nav">
@@ -32,12 +32,18 @@
                                 <!-- Swiper -->
                                 <div class="swiper mySwiper1">
                                     <div class="swiper-wrapper">
-                                        <div class="swiper-slide"><a href="javascript:return false;">실시간 인기게임 TOP5</a></div>
-                                        <div class="swiper-slide"><a href="javascript:return false;">Top 1 스텔라블레이드</a></div>
-                                        <div class="swiper-slide"><a href="javascript:return false;">Top 2 붉은사막</a></div>
-                                        <div class="swiper-slide"><a href="javascript:return false;">Top 3 쓰론앤리버티</a></div>
-                                        <div class="swiper-slide"><a href="javascript:return false;">Top 4 리그오브레전드</a></div>
-                                        <div class="swiper-slide"><a href="javascript:return false;">Top 5 마리오카트8디럭스</a></div>
+                                        <div class="swiper-slide"><a href="javascript:return false;">실시간 인기게임 TOP5</a>
+                                        </div>
+                                        <div class="swiper-slide"><a href="javascript:return false;">Top 1 스텔라블레이드</a>
+                                        </div>
+                                        <div class="swiper-slide"><a href="javascript:return false;">Top 2 붉은사막</a>
+                                        </div>
+                                        <div class="swiper-slide"><a href="javascript:return false;">Top 3 쓰론앤리버티</a>
+                                        </div>
+                                        <div class="swiper-slide"><a href="javascript:return false;">Top 4 리그오브레전드</a>
+                                        </div>
+                                        <div class="swiper-slide"><a href="javascript:return false;">Top 5 마리오카트8디럭스</a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -52,7 +58,7 @@
                         </li>
                     </ul>
                 </div>
-                
+
             </div>
         </div>
         <div id="section1">
@@ -112,7 +118,7 @@
                                         src="images/main/Bestgame2.jpg" alt="Bestgame2"></a></div>
                             <div class="swiper-slide slide03 imgwrap"><a href="javascript:return false;"><img
                                         src="images/main/Bestgame3.jpg" alt="Bestgame3"></a></div>
-                        </div> 
+                        </div>
                     </div>
                 </div>
             </div>
@@ -157,7 +163,16 @@
                                     </div>
                                 </li>
                                 <li>
-                                    <div class="img_wrap"><img src="images/main/인기게임2_tl.png" alt="인기게임2_tl"></div>
+                                    <div class="cover_wrap">
+                                        <div class="content_img">
+                                            <div class="img_wrap">
+                                                <img src="images/main/인기게임2_tl.png" alt="인기게임2_tl">
+                                            </div>
+                                        </div>
+                                        <div class="cover">
+                                            <video src="media/THRONE AND LIBERTY.mp4" muted autoplay loop width="300"></video>
+                                        </div>
+                                    </div>
                                     <div class="game_text_wrap">
                                         <p class="game_title">THRONE AND LIBERTY</p>
                                         <p class="game_tag">#쓰론앤리버티 #엔씨소프트</p>
@@ -168,12 +183,11 @@
                                     </div>
                                 </li>
                                 <li>
-
                                     <div class="img_wrap"><img src="images/main/인기게임3_lol.png" alt="인기게임3_lol">
                                     </div>
                                     <div class="game_text_wrap">
-                                        <p class="game_title">THRONE AND LIBERTY</p>
-                                        <p class="game_tag">#쓰론앤리버티 #엔씨소프트</p>
+                                        <p class="game_title">LEAGUE OF LEGENDS</p>
+                                        <p class="game_tag">#리그오브레전드 #롤 #lol</p>
                                         <div class="flex_wrap">
                                             <p class="price">￦46,320</p>
                                             <p class="add">+더보기</p>
@@ -191,8 +205,8 @@
                                         </div>
                                     </div>
                                     <div class="game_text_wrap">
-                                        <p class="game_title">THRONE AND LIBERTY</p>
-                                        <p class="game_tag">#쓰론앤리버티 #엔씨소프트</p>
+                                        <p class="game_title">PALWORLD</p>
+                                        <p class="game_tag">#팰월드 #PoketPair</p>
                                         <div class="flex_wrap">
                                             <p class="price">￦46,320</p>
                                             <p class="add">+더보기</p>
