--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                                             </div>
                                         </div>
                                         <div class="cover">
-                                            <video src="media/THRONE AND LIBERTY.mp4" muted autoplay loop width="300"></video>
+                                            <video src="media/THRONE AND LIBERTY.mp4" muted autoplay loop height="231"></video>
                                         </div>
                                     </div>
                                     <div class="game_text_wrap">
