--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="wrap">
         <div id="header">
             <div class="video_wrap">
-                <video src="media/main.mp4" muted autoplay loop width="1920"></video>
+                <video src="media/main.mp4#t=1" muted autoplay loop width="1920"></video>
             </div>
             <div class="header_inner">
                 <div id="nav">
@@ -170,7 +170,7 @@
                                             </div>
                                         </div>
                                         <div class="cover">
-                                            <video src="media/THRONE AND LIBERTY.mp4" muted autoplay loop height="231"></video>
+                                            <video src="media/THRONE AND LIBERTY.mp4#t=7" muted autoplay loop height="231"></video>
                                         </div>
                                     </div>
                                     <div class="game_text_wrap">
